--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=8080
 spring.profiles.active=dev
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/covid?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
