--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/covid?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+#web.upload-path is a custom property to assign a place for storing upload-files
+web.upload-path=C:/WorkSpace/web/SEProj/
+#this property is for static files.aiming for a quick response of static files
+spring.web.resources.static-locations=classpath:///META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${web.upload-path}
