--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8080
 spring.profiles.active=dev
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/covid?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:sqlserver://localhost:1433;database=books;encrypt=false
 #web.upload-path is a custom property to assign a place for storing upload-files
 web.upload-path=C:/WorkSpace/web/SEProj/
 #this property is for static files.aiming for a quick response of static files
