修改了logback的输出路径
现在可以在back或SEProj项目中直接打开，日志位置不会出错

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:sqlserver://localhost:1433;database=books;encrypt=false
 #web.upload-path is a custom property to assign a place for storing upload-files
-web.upload-path=C:/WorkSpace/web/SEProj/
-#this property is for static files.aiming for a quick response of static files
+web.upload-path=C:/WorkSpace/web/SEProj/upload
+#this property is for static files. aiming for a quick response of static resources
 spring.web.resources.static-locations=classpath:///META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${web.upload-path}
