add sqlserver page addon
增加支持SQL server分页功能的插件pagehelper

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.url=jdbc:sqlserver://localhost:1433;database=books;encrypt=fal
 web.upload-path=C:/WorkSpace/web/SEProj/upload
 #this property is for static files. aiming for a quick response of static resources
 spring.web.resources.static-locations=classpath:///META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${web.upload-path}
+#set dialect of page-helper
+pagehelper.auto-dialect=sqlserver
