--- a/back/pom.xml
+++ b/back/pom.xml
@@ -126,6 +126,13 @@
             <artifactId>jtds</artifactId>
             <version>1.3.1</version>
         </dependency>
+
+        <!--此依赖用于支持SQL server的分页插件功能-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.10</version>
+        </dependency>
     </dependencies>
 
     <build>
