--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -5,22 +5,25 @@ spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:sqlserver://localhost:1433;DatabaseName=books;encrypt=false
-#web.upload-path is a custom property to assign a place for storing upload-files
-web.upload-path=C:/WorkSpace/web/SEProj/
-#this property is for static files.aiming for a quick response of static files
+#\u8FD9\u4E2A\u914D\u7F6E\u9879\u662F\u4E3A\u4E86\u5B58\u50A8\u7528\u6237\u4E0A\u4F20\u6587\u4EF6\u7684\u3002\u8FD9\u91CC\u662F\u5B58\u50A8\u5728\u672C\u5730\u7684\uFF01\uFF01-->\u914D\u7F6E\u96BE\u4EE5\u5B9E\u73B0\uFF0C\u6682\u65F6\u4E0D\u7528
+#web.upload-path=C:/WorkSpace/web/SEProj/
+#\u89E3\u51B3\u9759\u6001\u6587\u4EF6\u65E0\u6CD5\u8BBF\u95EE\u7684\u95EE\u9898\uFF0C\u5B9E\u73B0\u5FEB\u901F\u8BBF\u95EE
 spring.web.resources.static-locations=classpath:///META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${web.upload-path}
-#set dialect of page-helper(this usage maybe not correct)
-#pagehelper.dialect=sqlserver
-#following two set e-mail properties
-#use smtp protocol
+#set dialect of page-helper
+#\u8FD9\u4E24\u9879\u914D\u7F6E\u7528\u4E8E\u53D1\u9001\u90AE\u7BB1\u9A8C\u8BC1\u7801
+#smtp\u534F\u8BAE
 spring.mail.protocol=smtp
 spring.mail.host=smtp.qq.com
 spring.mail.port=587
 spring.mail.username=3396024490@qq.com
-#use authorization code to log in
+#\u90AE\u7BB1\u6388\u6743\u7801
 spring.mail.password=ewvwgbqduimzchde
 spring.mail.test-connection=false
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.debug=false
 spring.mail.properties.mail.mime.splitlongparameters=false
 spring.mail.default-encoding=UTF-8
+#\u5B58\u50A8\u652F\u4ED8\u5B9D\u5BC6\u94A5\u7684\u672C\u5730\u6587\u4EF6\u5730\u5740-->\u914D\u7F6E\u96BE\u4EE5\u5B9E\u73B0\uFF0C\u6682\u65F6\u4E0D\u7528
+#alipay.keyPath=C:/Users/yujin/Documents/\u652F\u4ED8\u5B9D\u5F00\u653E\u5E73\u53F0\u5BC6\u94A5\u5DE5\u5177/\u5BC6\u94A520230323210457/\u5E94\u7528\u79C1\u94A5RSA2048-\u654F\u611F\u6570\u636E\uFF0C\u8BF7\u59A5\u5584\u4FDD\u7BA1.txt
+#\u652F\u4ED8\u5B9D\u652F\u4ED8\u6210\u529F\u540E\u8DF3\u8F6C\u5230\u7684\u9875\u9762
+alipay.returnUrl=http://localhost:8080/alipay/return
