--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.mail.properties.mail.mime.splitlongparameters=false
 spring.mail.default-encoding=UTF-8
 #\u652F\u4ED8\u5B9D\u652F\u4ED8\u914D\u7F6E\u9879
 #\u5B58\u50A8\u652F\u4ED8\u5B9D\u5BC6\u94A5\u7684\u672C\u5730\u6587\u4EF6\u5730\u5740
-alipay.keyPath=properties/\u5E94\u7528\u79C1\u94A5RSA2048-\u654F\u611F\u6570\u636E\uFF0C\u8BF7\u59A5\u5584\u4FDD\u7BA1.txt
+alipay.keyPath=properties/\u8FD9\u4E2A\u6587\u4EF6\u4E0D\u53EF\u4EE5\u4E0A\u4F20\u7F51\u7EDC\uFF01\uFF01\uFF01\u7EDD\u5BF9\u4E0D\u53EF\u4EE5\uFF01\uFF01\uFF01.txt
 #\u652F\u4ED8\u5B9D\u652F\u4ED8\u6210\u529F\u540E\u8DF3\u8F6C\u5230\u7684\u9875\u9762
 alipay.returnUrl=http://localhost:8080/alipay/return
 alipay.appId=2021000122670344
