--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,33 +1,33 @@
 server.port=8080
 spring.profiles.active=dev
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-#sqlserver\u6570\u636E\u5E93\u914D\u7F6E
+##sqlserver\u6570\u636E\u5E93\u914D\u7F6E
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:sqlserver://localhost:1433;DatabaseName=books;encrypt=false
-#autoGenerator\u914D\u7F6E
+##autoGenerator\u914D\u7F6E
 databaseName=books
 tableNames=BookInfo,CardInfo
-#\u8FD9\u4E2A\u914D\u7F6E\u9879\u662F\u4E3A\u4E86\u5B58\u50A8\u7528\u6237\u4E0A\u4F20\u6587\u4EF6\u7684\u3002\u8FD9\u91CC\u662F\u5B58\u50A8\u5728\u672C\u5730\u7684\uFF01\uFF01
+##\u8FD9\u4E2A\u914D\u7F6E\u9879\u662F\u4E3A\u4E86\u5B58\u50A8\u7528\u6237\u4E0A\u4F20\u6587\u4EF6\u7684\u3002\u8FD9\u91CC\u662F\u5B58\u50A8\u5728\u672C\u5730\u7684\uFF01\uFF01
 web.upload-path=C:/WorkSpace/web/SEProj/
-#\u89E3\u51B3\u9759\u6001\u6587\u4EF6\u65E0\u6CD5\u8BBF\u95EE\u7684\u95EE\u9898\uFF0C\u5B9E\u73B0\u5FEB\u901F\u8BBF\u95EE
+##\u89E3\u51B3\u9759\u6001\u6587\u4EF6\u65E0\u6CD5\u8BBF\u95EE\u7684\u95EE\u9898\uFF0C\u5B9E\u73B0\u5FEB\u901F\u8BBF\u95EE
 spring.web.resources.static-locations=classpath:///META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${web.upload-path}
-#set dialect of page-helper
-#\u8FD9\u4E24\u9879\u914D\u7F6E\u7528\u4E8E\u53D1\u9001\u90AE\u7BB1\u9A8C\u8BC1\u7801
+#s#et dialect of page-helper
+##\u8FD9\u4E24\u9879\u914D\u7F6E\u7528\u4E8E\u53D1\u9001\u90AE\u7BB1\u9A8C\u8BC1\u7801
 #smtp\u534F\u8BAE
 spring.mail.protocol=smtp
 spring.mail.host=smtp.qq.com
 spring.mail.port=587
 spring.mail.username=3396024490@qq.com
 #\u90AE\u7BB1\u6388\u6743\u7801
-spring.mail.password=bkdbodbpojbndafe
+spring.mail.password=ENC(Uk7qrE9yEZpyFn0QEqw4kWSOcIwgMu4ZY0NNcC0Yb5FjHbNnugKgVg==)
 spring.mail.test-connection=false
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.debug=false
 spring.mail.properties.mail.mime.splitlongparameters=false
 spring.mail.default-encoding=UTF-8
-#\u652F\u4ED8\u5B9D\u652F\u4ED8\u914D\u7F6E\u9879
+##\u652F\u4ED8\u5B9D\u652F\u4ED8\u914D\u7F6E\u9879
 #\u5B58\u50A8\u652F\u4ED8\u5B9D\u5BC6\u94A5\u7684\u672C\u5730\u6587\u4EF6\u5730\u5740
 alipay.keyPath=properties/\u652F\u4ED8\u5B9D\u79D8\u94A5\uFF0C\u8FD9\u4E2A\u6587\u4EF6\u4E0D\u53EF\u4EE5\u4E0A\u4F20\u7F51\u7EDC\uFF01\uFF01\uFF01\u7EDD\u5BF9\u4E0D\u53EF\u4EE5\uFF01\uFF01\uFF01.txt
 #\u652F\u4ED8\u5B9D\u652F\u4ED8\u6210\u529F\u540E\u8DF3\u8F6C\u5230\u7684\u9875\u9762
@@ -44,3 +44,8 @@ aliyun.sms.templateCodeOfYZM=SMS_275405123
 aliyun.sms.signNameOfYZM=\u7F51\u7EDC\u9C7C\u79D1\u6280
 #\u5BC6\u94A5\u4F4D\u7F6E
 aliyun.sms.accessKeySecretPath=properties/\u963F\u91CC\u4E91sms\u5BC6\u94A5\uFF0C\u8FD9\u4E2A\u6587\u4EF6\u4E0D\u80FD\u4E0A\u4F20\u7F51\u7EDC\uFF01.txt
+##\u8FD9\u4E2A\u914D\u7F6E\u9879\u662F\u7528\u4E8E\u5B89\u5168\u52A0\u5BC6
+#\u52A0\u5BC6\u5BC6\u7801
+jasypt.encryptor.password=yjy765
+#\u52A0\u5BC6\u7B97\u6CD5
+jasypt.encryptor.algorithm=PBEWITHMD5ANDDES
