--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=root
 spring.datasource.url=jdbc:sqlserver://localhost:1433;DatabaseName=SEP;encrypt=false
 ##autoGenerator\u914D\u7F6E
 databaseName=SEP
-tableNames=aircraft,flight_info,flight_ticket,flight_time,service_provider,super_usr,usr,whole_order
+tableNames=aircraft,flight_info,flight_ticket,flight_time,passenger,railway_carriage_information,service_provider,super_usr,train_information,train_number_details,train_number_information,usr,whole_order
 ##\u8FD9\u4E2A\u914D\u7F6E\u9879\u662F\u4E3A\u4E86\u5B58\u50A8\u7528\u6237\u4E0A\u4F20\u6587\u4EF6\u7684\u3002\u8FD9\u91CC\u662F\u5B58\u50A8\u5728\u672C\u5730\u7684\uFF01\uFF01
 web.upload-path=C:/WorkSpace/web/SEProj/
 ##\u89E3\u51B3\u9759\u6001\u6587\u4EF6\u65E0\u6CD5\u8BBF\u95EE\u7684\u95EE\u9898\uFF0C\u5B9E\u73B0\u5FEB\u901F\u8BBF\u95EE
