--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -47,4 +47,4 @@ aliyun.sms.accessKeySecret=ENC(/bA/U64lDJExU5CSgAJGAwJXNfJmKEkx9hibbSumcoFVKMw1i
 jasypt.encryptor.algorithm=PBEWITHMD5ANDDES
 ##\u7528\u4E8E\u914D\u7F6E\u8D85\u7EA7\u7BA1\u7406\u5458\u7684ID
 #\u8D85\u7EA7\u7BA1\u7406\u5458\u7684ID
-super.admin.id=00001
+super.usr.id=00001
