--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -48,3 +48,6 @@ jasypt.encryptor.algorithm=PBEWITHMD5ANDDES
 ##\u7528\u4E8E\u914D\u7F6E\u8D85\u7EA7\u7BA1\u7406\u5458\u7684ID
 #\u8D85\u7EA7\u7BA1\u7406\u5458\u7684ID
 super.usr.id=00001
+##\u5168\u5C40mybatis\u66F4\u65B0\u914D\u7F6E
+#\u5168\u5C40\u66F4\u65B0\u7B56\u7565\uFF1A\u7A7A\u503C\u4E0D\u66F4\u65B0\uFF0C\u7A7A\u5B57\u7B26\u4E32\u4E5F\u4E0D\u66F4\u65B0
+mybatis-plus.global-config.db-config.update-strategy=not_empty
