更改测试代码，防止打包时自动跑测试造成损失

--- a/back/src/main/resources/application-dev.properties
+++ b/back/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 #\u547D\u4EE4\u884C\uFF1A--spring.profiles.active=dev
-#\u914D\u7F6E\u6587\u4EF6\uFF1Aspring.profiles.active=dev#
+#\u914D\u7F6E\u6587\u4EF6\uFF1Aspring.profiles.active=dev
 #jvm\u53C2\u6570:-Dspring.profiles.active=dev
 
 server.port=8080
