更改适配代码

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+#spring.profiles.active=prod
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 ##sqlserver\u6570\u636E\u5E93\u914D\u7F6E
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
