--- a/back/src/main/resources/application-prod.properties
+++ b/back/src/main/resources/application-prod.properties
@@ -11,5 +11,5 @@ alipay.returnUrl=""
 alipay.notifyUrl=""
 ##\u8FD9\u4E2A\u914D\u7F6E\u9879\u662F\u4E3A\u4E86\u5B58\u50A8\u7528\u6237\u4E0A\u4F20\u6587\u4EF6\u7684\u3002\u8FD9\u91CC\u662F\u5B58\u50A8\u5728\u672C\u5730\u7684\uFF01\uFF01
 web.upload-path="C:/Users/Administrator/Desktop/upload/"
-##log\u8DEF\u5F84\u6307\u5B9A
-log.path="C:/Users/Administrator/Desktop/log"
+###log\u8DEF\u5F84\u6307\u5B9A
+#log.path="C:/Users/Administrator/Desktop/log"
