--- a/back/src/main/resources/application-dev.properties
+++ b/back/src/main/resources/application-dev.properties
@@ -6,9 +6,9 @@ server.port=8080
 
 ##\u652F\u4ED8\u5B9D\u652F\u4ED8\u914D\u7F6E\u9879
 #\u652F\u4ED8\u5B9D\u652F\u4ED8\u6210\u529F\u540E\u8DF3\u8F6C\u5230\u7684\u9875\u9762
-alipay.returnUrl=http://localhost:${server.port}/whole-order/callback
+alipay.returnUrl=http://localhost:${server.port}
 #\u8BBE\u7F6E\u5F02\u6B65\u901A\u77E5\u63A5\u6536\u670D\u52A1\u5730\u5740\uFF0C\u9700\u8981\u5916\u7F51\u53EF\u4EE5\u8BBF\u95EE\uFF0C\u53EF\u4EE5\u8BBE\u7F6E\u5185\u7F51\u7A7F\u900F
-alipay.notifyUrl=http://localhost:${server.port}/alipay/notify
+alipay.notifyUrl=http://localhost:${server.port}/whole-order/callback
 ##\u8FD9\u4E2A\u914D\u7F6E\u9879\u662F\u4E3A\u4E86\u5B58\u50A8\u7528\u6237\u4E0A\u4F20\u6587\u4EF6\u7684\u3002\u8FD9\u91CC\u662F\u5B58\u50A8\u5728\u672C\u5730\u7684\uFF01\uFF01
 web.upload-path=C:/WorkSpace/web/SEProj/
 ###log\u8DEF\u5F84\u6307\u5B9A
