增加飞机查询接口

--- a/back/src/main/resources/application-prod.properties
+++ b/back/src/main/resources/application-prod.properties
@@ -13,3 +13,6 @@ alipay.notifyUrl=www.pleasurtour.asia/whole-order/callback
 web.upload-path=C:/Users/Administrator/Desktop/upload/
 ###log\u8DEF\u5F84\u6307\u5B9A
 #log.path="C:/Users/Administrator/Desktop/log"
+##sqlserver\u6570\u636E\u5E93\u914D\u7F6E
+spring.datasource.username=root
+spring.datasource.password=ENC(VgPB+t9tieg66p43zQdBfnVpfFcWkzCUrD4LeGLvplyEOdrlbpuN6w==)
