--- a/back/src/main/resources/application-dev.properties
+++ b/back/src/main/resources/application-dev.properties
@@ -13,3 +13,6 @@ alipay.notifyUrl=http://localhost:${server.port}/whole-order/callback
 web.upload-path=C:/WorkSpace/web/SEProj/
 ###log\u8DEF\u5F84\u6307\u5B9A
 #logging.file.path=C:/WorkSpace/web/SEProj/log
+##sqlserver\u6570\u636E\u5E93\u914D\u7F6E
+spring.datasource.username=root
+spring.datasource.password=root
